# eigenio

./: .gitignore  CMakeLists.txt  README.md  setup.py
include/EigenIO/: EigenIO.h
python/eigenio/: __init__.py  eigenio.py
test/: eigenio.cpp
